fix pagination overlapping

--- a/src/styles/components/paginator.scss
+++ b/src/styles/components/paginator.scss
@@ -5,7 +5,7 @@
     @apply pl-0;
 
     a {
-      @apply no-underline text-sm bg-gray-50 hover:bg-gray-100 active:bg-gray-200 ring-1 ring-gray-900 ring-opacity-10 py-2 px-4;
+      @apply no-underline text-sm bg-gray-50 hover:bg-gray-100 active:bg-gray-200 ring-1 ring-gray-900 ring-opacity-10 py-2 px-4 block;
     }
 
     &::before {
